--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -37,6 +37,20 @@
   outline: 0;
 }
 
+
+.traderLink {
+  display: inline-block;
+  color: #f2f2f2;
+  background-color: #00acb0;
+  text-align: center;
+  padding: 24px 10px;
+  text-decoration: none;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  outline: 0;
+}
+
 .navLink:hover {
   background-color: #008183;
 }
